adds fonts to bootstrap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,13 +18,15 @@
 
 
 @import "ionicons.min";
+@import "ionicons";
 
 @import "magnific-popup";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @font-face {
     font-family: 'fontawesome';
-    src: url('ionicons.woff') format('woff'),
-          url('fontawesome-webfont.woff') format('woff'),
-          url('fontawesome-webfont.ttf') format('truetype');
+    src: url('/assests/ionicons.woff') format('woff'),
+      url('/assests/ionicons.ttf') format('truetype');
+    src: url('/assets/fontawesome-webfont.woff') format('woff'),
+        url('/assets/fontawesome-webfont.ttf') format('truetype');
 }
