--- a/Raleway-WB09054T6/Raleway - Mega Responsive HTML5 Template/css/width-boxed.css
+++ b/Raleway-WB09054T6/Raleway - Mega Responsive HTML5 Template/css/width-boxed.css
@@ -1,5 +1,5 @@
 #bg-boxed {
-    background-image: url(../images/patterns/pattern2.png);
+    background-image:url('<%= asset_path("pattern2.png") %>');
     background-repeat: repeat;
     height: 100%;
 }
