remove some things

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,43 +31,9 @@
   <%= link_to "Sign Up", '/signup' %>
   <%= link_to "Log In", '/login' %>
 	<% end %>
-  <!-- <%= link_to "New Post", '/posts/new' %> -->
-  <!-- <%= link_to 'Edit', '/posts/edit' %> -->
-  <!-- <%= link_to 'post title', '/posts/post_id' %> -->
+
 	<div id="royal_preloader"></div>
 
-	<!-- Start Switcher -->
-	<div class="demo_changer">
-	    <div class="demo-icon">
-	        <i class="fa fa-cog fa-spin fa-2x"></i>
-	    </div><!-- end opener icon -->
-	    <div class="form_holder">
-	        <div class="row">
-	            <div class="col-sm-12">
-	                <div class="predefined_styles">
-	                    <!-- MODULE #1 -->
-	                    <a href="" data-rel="width-full" class="styleswitch2">Full Width</a><br>
-	                    <a href="" data-rel="width-boxed" class="styleswitch2">Boxed Layout</a>
-	                    <!-- END MODULE #1 -->
-	                    <hr>
-	                    <h4>Colors</h4>
-	                    <!-- MODULE #2 -->
-	                    <a href="" data-rel="main-css" class="styleswitch"><div class="btn orange-css-square"></div></a>
-	                    <a href="" data-rel="blue" class="styleswitch"><div class="btn blue-css-square"></div></a>
-	                    <a href="" data-rel="green" class="styleswitch"><div class="btn green-css-square"></div></a>
-	                    <a href="" data-rel="purple" class="styleswitch"><div class="btn purple-css-square"></div></a>
-	                    <a href="" data-rel="dark-blue" class="styleswitch"><div class="btn dark-blue-css-square"></div></a>
-	                    <a href="" data-rel="red" class="styleswitch"><div class="btn red-css-square"></div></a>
-	                    <a href="" data-rel="silver" class="styleswitch"><div class="btn silver-css-square"></div></a>
-	                    <a href="" data-rel="seagul" class="styleswitch"><div class="btn seagul-css-square"></div></a>
-	                    <a href="" data-rel="pinkish" class="styleswitch"><div class="btn pinkish-css-square"></div></a>
-	                    <!-- END MODULE #2 -->
-	                </div><!-- end predefined_styles -->
-	            </div><!-- end col -->
-	        </div><!-- end row -->
-	    </div><!-- end form_holder -->
-	</div><!-- end demo_changer -->
-	<!-- End Switcher -->
 
 	<!-- Begin Boxed or Fullwidth Layout -->
 	<div id="bg-boxed">
@@ -787,9 +753,9 @@
 						<!-- About -->
 						<div class="col-sm-3">
 							<div class="heading-footer"><h4>About</h4></div>
-							<p>Raleway Bootstrap 3 Template is what you need for your next project or client.</p>
-							<a href="features.html" class="btn btn-primary btn-rw mt10">
-								Buy now
+							<p>smalltalkto.me is the best app.</p>
+							<a href="" class="btn btn-primary btn-rw mt10">
+								Empty Button
 							</a>
 						</div>
 
@@ -816,9 +782,6 @@
 							</a>
 							<a class="btn btn-social-icon btn-adn btn-lg">
 								<i class="fa fa-adn"></i>
-							</a>
-							<a class="btn btn-social-icon btn-bitbucket btn-lg">
-								<i class="fa fa-bitbucket"></i>
 							</a>
 							<a class="btn btn-social-icon btn-tumblr btn-lg">
 								<i class="fa fa-tumblr"></i>
@@ -864,7 +827,7 @@
 					<div class="row">
 						<hr class="dark-hr">
 						<div class="col-sm-11 col-xs-10">
-							<p class="copyright">© 2013 Raleway. All rights reserved. Theme by <b>Denis Samardjiev</b>.</p>
+							<p class="copyright">© 2015 smalltalkto.me. All rights reserved.</p>
 						</div>
 						<div class="col-sm-1 col-xs-2 text-right">
 							<a href="#" class="scroll-top"><div class="footer-scrolltop-holder"><span class="ion-ios7-arrow-up footer-scrolltop"></span></div></a>
