--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,23 @@
+<div>
+  <% if logged_in? %>
+    Current user is: <%= current_user.name  %>
+    <%= link_to "Log Out", sessions_path, method: :delete %>
+    <%= link_to "Your page", 'users/user_id' %>
+  <% else %>
+    <%= link_to "Sign Up", '/signup' %>
+    <%= link_to "Log In", '/login' %>
+  <% end %>
+</div>
+
+<div>
+  <% if current_user %>
+    Signed in as <strong><%= current_user.name%></strong>!
+    <%= link_to "Sign out", signout_path, id: "sign_out" %>
+    <% else %>
+    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+  <%end%>
+</div>
+
 <div class="jumbotron text-center">
     <h1>Small Talk</h1>
     <p>We'll make all your wildest dreams come true!</p>
