fixes delete button without using ajax

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,5 @@
 <p> <%= current_user.name %>  </p>
 <% current_user.tips.each do |tip| %>
 <p><%= tip.description %></p>
-<%= button_to "Delete tip", 
-<%= binding.pry %>
+<%= button_to "Delete tip", remote: true, params: {id: tip.id} %>
 <% end %>
