rm extra application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,27 @@
 	<div id="royal_preloader"></div>
 
 	<!-- Begin Boxed or Fullwidth Layout -->
+<div>
+
+	<% if flash[:error] %>
+    <div>Error: <%= flash[:error] %></div>
+  <% end %>
+
+  <% if flash[:notice] %>
+    <div><%= flash[:notice] %></div>
+  <% end %>
+
+</div>
+
+<div>
+	<% if current_user %>
+		Signed in as <strong><%= current_user.name%></strong>!
+		<%= link_to "Sign out", signout_path, id: "sign_out" %>
+		<% else %>
+		<%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+	<%end%>
+</div>
+
 	<div id="bg-boxed">
 	    <div class="boxed">
 	    <!-- Begin Header -->
