adds some styling to user show page

--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -1,5 +1,5 @@
 <%= link_to "Back", root_path %>
-<%= link_to "Your Page", 'user/user_id' %>
+<%= link_to "Your Page", 'users/user_id' %>
 
 <h1><%= @theme.name %></h1>
 
