--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,30 @@
-<p> <%= current_user.name %>  </p>
+
+
+<div class="header">
+					<div class="container">
+						<div class="row">
+							<!-- Page Title -->
+							<div class="col-sm-6 col-xs-12">
+								<p><h2>Welcome <%="#{current_user.name}"%></p></h2>
+
+							</div>
+
+							<!-- Breadcrumbs -->
+							<div class="col-sm-6">
+								<ol class="breadcrumb">
+
+								</ol>
+							</div><!-- /column -->
+						</div><!-- /row -->
+					</div><!-- /container -->
+				</div>
 <% current_user.tips.each do |tip| %>
-<p><%= tip.description %></p>
-<%= button_to "Delete tip", remote: true, params: {id: tip.id} %>
+<p><div class="fa-2x"><%= tip.description %></div></p>
+	<div class="button">
+		<%= link_to "Share tip", remote: true %>
+	</div>
+
+	<div class="button">
+		<%= link_to "Remove tip", remote: true, params: {id: tip.id} %>
+	</div>
 <% end %>
