--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,75 +1,34 @@
 <div class="container">
   <div class="row">
-    <!-- About -->
+    <!-- Our Mission -->
     <div class="col-sm-3">
-      <div class="heading-footer"><h4>About</h4></div>
-      <p>smalltalkto.me is the best app.</p>
-      <a href="" class="btn btn-primary btn-rw mt10">
-        Empty Button
+      <div class="heading-footer "><h4>Our Mission</h4></div>
+      <!-- <%= link_to "Our Mission", mission_path %></p> -->
+        <a href="/mission" class="btn-lg btn-primary">Learn About Us</a>
       </a>
     </div>
 
-    <!-- Social -->
+    <!-- Requesting a theme -->
     <div class="col-sm-3 mg25-xs">
-      <div class="heading-footer"><h4>Social Networks</h4></div>
-      <a class="btn btn-social-icon btn-twitter btn-lg">
-        <i class="fa fa-twitter"></i>
-      </a>
-      <a class="btn btn-social-icon btn-instagram btn-lg">
-        <i class="fa fa-instagram"></i>
-      </a>
-      <a class="btn btn-social-icon btn-facebook btn-lg">
-        <i class="fa fa-facebook"></i>
-      </a>
-      <a class="btn btn-social-icon btn-vimeo btn-lg">
-        <i class="fa fa-vimeo-square"></i>
-      </a>
-      <a class="btn btn-social-icon btn-linkedin btn-lg">
-        <i class="fa fa-linkedin"></i>
-      </a>
-      <a class="btn btn-social-icon btn-google-plus btn-lg">
-        <i class="fa fa-google-plus"></i>
-      </a>
-      <a class="btn btn-social-icon btn-adn btn-lg">
-        <i class="fa fa-adn"></i>
-      </a>
-      <a class="btn btn-social-icon btn-tumblr btn-lg">
-        <i class="fa fa-tumblr"></i>
-      </a>
-      <a class="btn btn-social-icon btn-flickr btn-lg">
-        <i class="fa fa-flickr"></i>
-      </a>
+      <div class="heading-footer">
+        <h4 class="text-primary">Requesting a Theme</h4></div>
+        <!-- <p class="text-primary">This text is important.</p> -->
+        <!-- <%= link_to "Request a Theme", request_form_path %> -->
+        <a href="/request_form" class="btn-lg btn-primary">Tell Us your idea</a>
     </div>
 
-    <!-- Contact -->
+    <!-- Careers -->
     <div class="col-sm-3 mg25-xs">
-      <div class="heading-footer"><h4>Contact us</h4></div>
-      <p><span class="ion-home footer-info-icons"></span><small class="address">228 Park Ave S New York, NY 10003</small></p>
-      <p><span class="ion-email footer-info-icons"></span><small class="address"><a href="mailto:info@raleway.com">info@raleway.com</a></small></p>
-      <p><span class="ion-ios7-telephone footer-info-icons"></span><small class="address">+11192386513</small></p>
+      <div class="heading-footer"><h4>Careers</h4></div>
+        <!-- <%= link_to "Careers", careers_path %> -->
+        <a href="/careers" class="btn-lg btn-primary">Wanna Join The Team?</a>
     </div>
 
-    <!-- Recent Work -->
+    <!-- Customer Support -->
     <div class="col-sm-3 hidden-xs">
-      <div class="heading-footer"><h4>Recent Work</h4></div>
-      <div class="col-xs-4 recent-work-padding">
-        <a href="images/projects/web2.jpg" class="thumbnail image-zoom-link">
-            <%= image_tag 'projects/thumbs/web2.jpg', alt: '...', class: 'thumbnail img-responsive' %>
-
-          </a>
-      </div>
-      <div class="col-xs-4 recent-work-padding">
-        <a href="images/projects/web3.jpg" class="thumbnail image-zoom-link">
-            <%= image_tag 'projects/thumbs/web3.jpg', alt: '...', class: 'thumbnail img-responsive' %>
-
-          </a>
-      </div>
-      <div class="col-xs-4 recent-work-padding">
-        <a href="images/projects/illustration1.jpg" class="thumbnail image-zoom-link">
-            <%= image_tag 'projects/thumbs/illustration1.jpg', alt: '...', class: 'thumbnail img-responsive' %>
-
-          </a>
-      </div>
+      <div class="heading-footer"><h4>Customer Support</h4></div>
+          <!-- <%= link_to "Customer Support", support_path %> -->
+          <a href="/support" class="btn-lg btn-primary">Get Support</a>
     </div>
   </div><!-- /row -->
 
@@ -84,3 +43,11 @@
     </div>
   </div><!-- /row -->
 </div><!-- /container -->
+
+<div class="container-fluid">
+  <p id="copyright">&copy;2016</p>
+</div>
+<!-- <p><span class="ion-home footer-info-icons"></span><small class="address">228 Park Ave S New York, NY 10003</small></p>
+<p><span class="ion-email footer-info-icons"></span><small class="address"><a href="mailto:info@raleway.com">info@raleway.com</a></small></p>
+<p><span class="ion-ios7-telephone footer-info-icons"></span><small class="address">+11192386513</small></p> use this code for the very
+bottom of the page for a contact list  -->
