put contact info in footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -32,6 +32,18 @@
     </div>
   </div><!-- /row -->
 
+<!-- Contact Info -->
+<div class="row">
+  <hr class="dark-hr">
+  <div class="col-sm-11 col-xs-10">
+    <p class="contact-us"> Contact Information for Smalltalkto.me</p>
+    <p> <span class="ion-home footer-info-icons"></span><small class="address">11 Broadway, Manhattan, NY</small><br>
+      <span class="ion-email footer-info-icons"></span><small class="email">smalltalk.me@gmail.com</small><br>
+      <span class="ion-ios7-telephone footer-info-icons"></span><small class="phone-number">11111111</span>
+      <!-- <small class="address">+11192386513</small> -->
+    <!-- <a href="mailto:info@raleway.com">info@raleway.com</a></small> -->
+  </div>
+
   <!-- Copyright -->
   <div class="row">
     <hr class="dark-hr">
@@ -44,8 +56,14 @@
   </div><!-- /row -->
 </div><!-- /container -->
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <p id="copyright">&copy;2016</p>
+  <div class="col-sm-3 mg25-xs">
+                            <div class="heading-footer"><h4>Contact us</h4></div>
+                            <p><span class="ion-home footer-info-icons"></span><small class="address">228 Park Ave S New York, NY 10003</small></p>
+                            <p><span class="ion-email footer-info-icons"></span><small class="address"><a href="mailto:info@raleway.com">info@raleway.com</a></small></p>
+                            <p><span class="ion-ios7-telephone footer-info-icons"></span><small class="address">+11192386513</small></p>
+                        </div> -->
 </div>
 <!-- <p><span class="ion-home footer-info-icons"></span><small class="address">228 Park Ave S New York, NY 10003</small></p>
 <p><span class="ion-email footer-info-icons"></span><small class="address"><a href="mailto:info@raleway.com">info@raleway.com</a></small></p>
