centered and styled abort and advice

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -39,7 +39,7 @@
     <p class="contact-us"> Contact Information for Smalltalkto.me</p>
     <p> <span class="ion-home footer-info-icons"></span><small class="address">11 Broadway, Manhattan, NY</small><br>
       <span class="ion-email footer-info-icons"></span><small class="email">smalltalk.me@gmail.com</small><br>
-      <span class="ion-ios7-telephone footer-info-icons"></span><small class="phone-number">11111111</span>
+      <span class="ion-ios7-telephone footer-info-icons"></span><small class="phone-number">631-906-4502</span>
       <!-- <small class="address">+11192386513</small> -->
     <!-- <a href="mailto:info@raleway.com">info@raleway.com</a></small> -->
   </div>
