--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,20 +1,20 @@
 <div>
   <% if logged_in? %>
     Current user is: <%= current_user.name  %>
-    <%= link_to "Log Out", sessions_path, method: :delete %>
-    <%= link_to "Your page", 'users/user_id' %>
+    <% link_to "Log Out", sessions_path, method: :delete %>
+    <%  link_to "Your page", 'users/user_id' %>
   <% else %>
-    <%= link_to "Sign Up", '/signup' %>
-    <%= link_to "Log In", '/login' %>
+    <%  link_to "Sign Up", '/signup' %>
+    <% link_to "Log In", '/login' %>
   <% end %>
 </div>
 
 <div>
   <% if current_user %>
     Signed in as <strong><%= current_user.name%></strong>!
-    <%= link_to "Sign out", signout_path, id: "sign_out" %>
+    <% link_to "Sign out", signout_path, id: "sign_out" %>
     <% else %>
-    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+    <% link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
   <%end%>
 </div>
 
@@ -39,7 +39,7 @@
 </div>
 
 <div class="abort-button">
-  <div class="text-center">
+  <div class="text-center btn-danger">
    <a href="/twilio" data-toggle="modal" class="btn btn-lg btn-circle btn-danger">Abort!</a>
   <!-- <a href="/twilio" class="btn btn-default orange-circle-button">Abort!</a> -->
   <!-- <%= link_to "Abort!", twilio_path, method: :get %> -->
