--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,4 @@
-
-
+<%= link_to "Home page", root_url %>
 <div class="header">
 					<div class="container">
 						<div class="row">
@@ -20,9 +19,9 @@
 				</div>
 <% current_user.tips.each do |tip| %>
 <p><div class="fa-2x"><%= tip.description %></div></p>
+		<div class="button">
+			<%=link_to "Remove THIS tip", delete_tip_path(current_user, tip_id: tip.id), method: :post, remote: true%>
+			<%#= button_to "Remove tip", remote: true, params: {id: tip.id} %>
+		</div>
 
-
-	<div class="button">
-		<%= link_to "Remove tip", remote: true, params: {id: tip.id} %>
-	</div>
 <% end %>
