--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
   <% if logged_in? %>
     Current user is: <%= current_user.name  %>
     <%= link_to "Log Out", sessions_path, method: :delete %>
-    <%= link_to "Your page", 'users/user_id' %>
+    <%= link_to "Your page", user_path(current_user) %>
   <% else %>
     <%= link_to "Sign Up", '/signup' %>
     <%= link_to "Log In", '/login' %>
