made the abort button bigger

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -39,8 +39,6 @@
 </div>
 
 <div class="abort-button">
-  <div class="text-center btn-danger">
-   <a href="/twilio" data-toggle="modal" class="btn btn-lg btn-circle btn-danger">Abort!</a>
-  <!-- <a href="/twilio" class="btn btn-default orange-circle-button">Abort!</a> -->
-  <!-- <%= link_to "Abort!", twilio_path, method: :get %> -->
+  <div class="text-center">
+   <a href="/twilio" style= "display: block; width: 100%;", data-toggle="modal" class="btn btn-lg btn-danger">Abort!</a>
 </div>
