--- a/app/views/themes/show.html.erb
+++ b/app/views/themes/show.html.erb
@@ -21,7 +21,7 @@
     <% @tip = @tips.sample %>
     <strong>Tip:</strong>
     <li><%=@tip.description %></li>
-    <%= button_to "Save Tip", '/users/edit', remote: true, params: {id: @tip.id} %>
+    <%=link_to "Save Tip", edit_user_path(current_user), method: :post, remote: true, class:"save_tip"%>
 
   </ul>
 
