--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,15 +1,15 @@
-@import "royal_preloader.css";
+@import "royal_preloader";
 @import "bootstrap-sprockets";
 @import "bootstrap";
-
+// @import "breakpoint";
 
 @import "style.css";
-@import "bootstrap-social.css";
+@import "bootstrap-social";
 @import "animate.min";
 @import "owl.carousel";
 @import "jquery.snippet";
 @import "buttons";
-@import "style-switcher";
+// @import "style-switcher";
 
 @import "colors/blue";
 
@@ -25,7 +25,7 @@
 @import "font-awesome";
 @font-face {
     font-family: 'fontawesome';
-    src: url('/assests/ionicons.woff') format('woff'),
+    src: url('/assests/ionicons') format('woff'),
       url('/assests/ionicons.ttf') format('truetype');
     src: url('/assets/fontawesome-webfont.woff') format('woff'),
         url('/assets/fontawesome-webfont.ttf') format('truetype');
