--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,9 @@
 	<%= csrf_meta_tags %>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+	<%= favicon_link_tag('favicon.ico') %>
+	<%= favicon_link_tag 'favicon.ico', rel: 'shortcut icon', type: 'image/x-icon' %>
+
 	<link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
